ghc-4335c07/testsuite/tests/parser/should_fail/T1344c.hs
module T1344c where

c = '\1114112'

